# cdm-lite

./: .gitignore  GEMINI.md  NOTICE  README.md  check_versions.sh  generate_models.sh  prek.toml  pyproject.toml  run_codegen.sh
.github/workflows/: ci.yml
src/cdm_lite/: __init__.py  cleaner.py  cli.py  day0.py  downloader.py  generator.py  registry.py  store.py
src/cdm_lite/templates/: pyproject_toml.py  readme_md.py
src/cdm_models/: __init__.py  _internal.py  _internal_1.py  _internal_2.py  _internal_3.py  _internal_4.py  _internal_5.py  cdm_base_datetime_AdjustableDate_schema.py  cdm_base_datetime_AdjustableDates_schema.py  cdm_base_datetime_AdjustableOrAdjustedDate_schema.py  cdm_base_datetime_AdjustableOrAdjustedOrRelativeDate_schema.py  cdm_base_datetime_AdjustableOrRelativeDate_schema.py  cdm_base_datetime_AdjustableOrRelativeDates_schema.py  cdm_base_datetime_AdjustableRelativeOrPeriodicDates_schema.py  cdm_base_datetime_AdjustedRelativeDateOffset_schema.py  cdm_base_datetime_AveragingSchedule_schema.py  cdm_base_datetime_BusinessCenterEnum_schema.py  cdm_base_datetime_BusinessCenterTime_schema.py  cdm_base_datetime_BusinessCenters_schema.py  cdm_base_datetime_BusinessDateRange_schema.py  cdm_base_datetime_BusinessDayAdjustments_schema.py  cdm_base_datetime_BusinessDayConventionEnum_schema.py  cdm_base_datetime_CalculationFrequency_schema.py  cdm_base_datetime_CalculationPeriodFrequency_schema.py  cdm_base_datetime_CommodityBusinessCalendarEnum_schema.py  cdm_base_datetime_CompoundingTypeEnum_schema.py  cdm_base_datetime_CustomisableOffset_schema.py  cdm_base_datetime_DateList_schema.py  cdm_base_datetime_DateRange_schema.py  cdm_base_datetime_DateTimeList_schema.py  cdm_base_datetime_DayOfWeekEnum_schema.py  cdm_base_datetime_DayTypeEnum_schema.py  cdm_base_datetime_Frequency_schema.py  cdm_base_datetime_Offset_schema.py  cdm_base_datetime_PeriodBound_schema.py  cdm_base_datetime_PeriodEnum_schema.py  cdm_base_datetime_PeriodExtendedEnum_schema.py  cdm_base_datetime_PeriodRange_schema.py  cdm_base_datetime_PeriodTimeEnum_schema.py  cdm_base_datetime_Period_schema.py  (+1035 more)
tests/: test_cleaner.py  test_cleaner_regressions.py  test_cli.py  test_downloader.py  test_generator.py  test_registry.py  test_store.py
util/: display_bad_json.py  fix_cdm_enum_schemas.py
