[project]
name = "cdm-lite"
version = "0.2.1"
description = "Python CDM Models"
readme = "README.md"
authors = [{ name = "Ben Allen", email = "ben05allen@hotmail.com" }]
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28.1",
  "platformdirs>=4.9.6",
  "pydantic>=2.13.4",
  "datamodel-code-generator[ruff]>=0.56.1",
  "typer>=0.25.1",
  "rich>=15.0.0",
]

[project.scripts]
cdm-lite = "cdm_lite.cli:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = [
  "E741", # ambiguous-variable-name
]

[tool.pytest.ini_options]
markers = ["integration: hits external services, not run in normal CI"]
testpaths = ["tests"]
addopts = ["--strict-markers", "-ra", "--tb=short"]

[dependency-groups]
dev = ["pytest>=9.0.3", "ruff>=0.15.12", "ty>=0.0.34"]
