[project]
name = "cdm-lite"
version = "0.3.1a1"
description = "Python CDM Models"
readme = "README.md"
authors = [{ name = "Ben Allen", email = "ben05allen@hotmail.com" }]
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28.1",
  "platformdirs>=4.9.6",
  "pydantic>=2.13.4",
  "datamodel-code-generator[ruff]>=0.56.1",
  "typer>=0.25.1",
  "rich>=15.0.0",
]
license-files = ["LICEN[CS]E*"]
keywords = [
  "FINOS",
  "CDM",
  "Common Domain Model",
  "ISDA",
  "Pydantic",
  "JSON-Schema",
  "finance",
  "regulation",
  "code-generation",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Office/Business :: Financial",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/ben05allen/cdm-lite"

[project.scripts]
cdm-lite = "cdm_lite.cli:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = [
  "E741", # ambiguous-variable-name
]

[tool.pytest.ini_options]
markers = ["integration: hits external services, not run in normal CI"]
testpaths = ["tests"]
addopts = ["--strict-markers", "-ra", "--tb=short"]

[dependency-groups]
dev = ["pytest>=9.0.3", "ruff>=0.15.12", "ty>=0.0.34"]
